inteligencia dos graficos inplementadas

--- a/index.html
+++ b/index.html
@@ -141,8 +141,17 @@
         </button>
       </div>
     </aside>
-    <main>
-      <p>resultados</p>
+    <main class="h-full">
+    <section id="charts-container">
+      <div class="h-[36dvh]">
+        <p>Resultado Final</p>
+        <canvas id="final-money-distribution"></canvas>
+      </div>
+      <div class="h-[56dvh]">
+        <p>Progressão</p>
+        <canvas id="progression"></canvas>
+      </div>
+    </section>      
     </main>
     <script type="module" src="./main.js"></script>
   </body>
