--- a/index.html
+++ b/index.html
@@ -141,14 +141,14 @@
         </button>
       </div>
     </aside>
-    <main class="h-full">
-    <section id="charts-container">
-      <div class="h-[36dvh]">
-        <p>Resultado Final</p>
+    <main class="row-span-2 col-span-2">
+    <section id="charts-container" class="h-full">
+      <div class="h-[36%] flex flex-col items-center pb-8">
+        <p class="font-bold text-lg">Resultado Final</p>
         <canvas id="final-money-distribution"></canvas>
       </div>
-      <div class="h-[56dvh]">
-        <p>Progressão</p>
+      <div class="h-[56%] flex flex-col items-center">
+        <p class="font-bold text-lg">Progressão</p>
         <canvas id="progression"></canvas>
       </div>
     </section>      
