processos relacionados aos graficos foram comentados

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       </div>
     </aside>
     <main class="row-span-2 col-span-2">
-    <section id="charts-container" class="h-full">
+    <!-- <section id="charts-container" class="h-full">
       <div class="h-[36%] flex flex-col items-center pb-8">
         <p class="font-bold text-lg">Resultado Final</p>
         <canvas id="final-money-distribution"></canvas>
@@ -151,7 +151,7 @@
         <p class="font-bold text-lg">Progressão</p>
         <canvas id="progression"></canvas>
       </div>
-    </section>      
+    </section>       -->
     </main>
     <script type="module" src="./main.js"></script>
   </body>
