--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
         <!-- quinto -->
         <div class="flex w-full flex-col px-4 my-2 h-[4.25rem]">
-          <label class="font-bold" for="tax-rate">Inpostos sobre lucro:</label>
+          <label class="font-bold" for="tax-rate">Impostos sobre lucro:</label>
           <div class="flex">
             <input
               value="%"
@@ -142,12 +142,12 @@
       </div>
     </aside>
     <main class="row-span-2 col-span-2">
-    <section id="charts-container" class="h-full">
-      <div class="h-[36%] flex flex-col items-center pb-8">
+    <section id="charts-container" class="h-full flex flex-col gap-1 items-center">
+      <div class="w-[36%] flex flex-col items-center">
         <p class="font-bold text-lg">Resultado Final</p>
         <canvas id="final-money-distribution"></canvas>
       </div>
-      <div class="h-[56%] flex flex-col items-center">
+      <div class="w-[85%]  flex flex-col items-center">
         <p class="font-bold text-lg">Progressão</p>
         <canvas id="progression"></canvas>
       </div>
