--- a/index.html
+++ b/index.html
@@ -144,16 +144,16 @@
       </div>
     </aside>
     <main class="row-span-2 col-span-2">
-      <!-- <section id="charts-container" class="h-full">
-      <div class="h-[36%] flex flex-col items-center pb-8">
-        <p class="font-bold text-lg">Resultado Final</p>
-        <canvas id="final-money-distribution"></canvas>
-      </div>
-      <div class="h-[56%] flex flex-col items-center">
-        <p class="font-bold text-lg">Progressão</p>
-        <canvas id="progression"></canvas>
-      </div>
-    </section>       -->
+      <section id="charts-container" class="h-full">
+        <div class="h-[36%] flex flex-col items-center pb-8">
+          <p class="font-bold text-lg">Resultado Final</p>
+          <canvas id="final-money-distribution"></canvas>
+        </div>
+        <div class="h-[56%] flex flex-col items-center">
+          <p class="font-bold text-lg">Progressão</p>
+          <canvas id="progression"></canvas>
+        </div>
+      </section>      
       <section id="table-container" class="h-full overflow-y-auto">
         <p class="font-bold text-lg text-center bg-white h-7">
           Resultados Mensais
