--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
       <div id="carousel" class="h-full w-full flex overflow-x-auto scroll-smooth">
         <section
           id="charts-container"
-          class="h-full flex flex-col gap-1 items-center basis-full shrink-0"
+          class="h-full flex flex-col gap-3 justify-center items-center basis-full shrink-0"
         >
-          <div class="w-[34%] flex flex-col items-center">
+          <div class="w-[22%] h-[36%] flex flex-col items-center">
             <p class="font-bold text-lg">Resultado Final</p>
             <canvas id="final-money-distribution"></canvas>
           </div>
-          <div class="w-[85%] flex flex-col items-center">
+          <div class="w-[65%] h-[56%] flex flex-col items-center">
             <p class="font-bold text-lg">Progressão</p>
             <canvas id="progression"></canvas>
           </div>
