--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="h-[100dvh] grid grid-cols-3 grid-rows-2">
     <aside
-      class="sticky top-0 flex flex-col items-center justify-evenly bg-emerald-300 row-span-2 border-solid border-r-4 border-gray-400 text-slate-700"
+      class="sticky top-0 flex flex-col items-center justify-evenly bg-gradient row-span-2 border-solid border-r-4 border-gray-400 text-slate-200"
     >
       <h1 class="text-2xl font-bold">Calculadora de Investimentos</h1>
       <form id="investiment-form">
@@ -137,7 +137,7 @@
         </button>
         <button
           id="clear-form"
-          class="w-1/2 py-1 rounded-md hover:bg-emerald-500"
+          class="w-1/2 py-1 rounded-md hover:bg-emerald-500 text-white"
         >
           Limpar
         </button>
